[gd_scene load_steps=10 format=2]

[ext_resource path="res://grafica/tiroM1.png" type="Texture" id=1]
[ext_resource path="res://grafica/tiroM2.png" type="Texture" id=2]
[ext_resource path="res://grafica/tiroM5.png" type="Texture" id=3]
[ext_resource path="res://script/Tiro_c.gd" type="Script" id=4]
[ext_resource path="res://grafica/tiroM4.png" type="Texture" id=5]
[ext_resource path="res://grafica/voa.png" type="Texture" id=6]
[ext_resource path="res://grafica/tiroM3.png" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 7 ), ExtResource( 5 ), ExtResource( 3 ) ],
"loop": false,
"name": "explodi",
"speed": 30.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": false,
"name": "normal",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 2.0

[node name="Tiro_c" type="Area2D" groups=["tiroSimples"]]
scale = Vector2( 2, 2 )
script = ExtResource( 4 )

[node name="AnimaTiro" type="AnimatedSprite" parent="."]
scale = Vector2( 0.1875, 0.1875 )
frames = SubResource( 1 )
animation = "explodi"
frame = 4
playing = true

[node name="TiroArea" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[connection signal="area_entered" from="." to="." method="_on_Tiro_c_area_entered"]
[connection signal="bateu" from="." to="." method="_on_Tiro_c_bateu"]
